--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,18 +51,6 @@ target_include_directories(clusters_search_udl PRIVATE
 )
 target_link_libraries(clusters_search_udl PRIVATE derecho::cascade faiss CUDA::cudart)
 
-
-add_library(centroids_search_udl SHARED centroids_search_udl.cpp)
-target_include_directories(centroids_search_udl PRIVATE
-    ${FAISS_INCLUDE_DIRS}
-    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
-)
-target_link_libraries(centroids_search_udl PRIVATE derecho::cascade faiss CUDA::cudart)
-
-
 add_custom_command(TARGET clusters_search_udl POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/cfg
         ${CMAKE_CURRENT_BINARY_DIR}/cfg
@@ -142,7 +130,7 @@ add_custom_command(TARGET clusters_search_udl POST_BUILD
             ${CMAKE_CURRENT_SOURCE_DIR}/setup.py
             ${CMAKE_CURRENT_SOURCE_DIR}/python_udls 
             ${CMAKE_CURRENT_SOURCE_DIR}/client_query.py
-    COMMENT "prepare centroids search configuration"
+    COMMENT "prepare cluster search configuration"
 )
 
 
