added a flag for running LLM in case the run env doesn't have GPU with large enough memory

--- a/perf_config.py.in
+++ b/perf_config.py.in
@@ -22,7 +22,9 @@ RETRIEVE_WAIT_INTERVAL = 0.5 # seconds
 '''
 Configurations for debugging
 '''
+INCLUDE_RUNNING_LLM=0
 PRINT_DEBUG_MESSAGE=@PRINT_DEBUG_MESSAGE@
+
 
 
 '''
