--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ target_include_directories(python_udl PRIVATE
 target_link_libraries(python_udl cascade Python3::Python Python3::NumPy)
 
 # printout mode
-set(PRINT_DEBUG_MESSAGE 1)
+set(PRINT_DEBUG_MESSAGE 0)
 
 # Client log tags
 set(LOG_TAG_QUERIES_SENDING_START 10000)
@@ -62,10 +62,13 @@ set(LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_END 20100)
 
 # AGG GENERATE UDL tags
 set(LOG_TAG_AGG_UDL_START 40000)
-set(LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED 40010)
-set(LOG_TAG_AGG_UDL_PUT_RESULT_START 40020)
-set(LOG_TAG_AGG_UDL_PUT_RESULT_END 40021)
-set(LOG_TAG_AGG_UDL_END 40100)
+set(LOG_TAG_AGG_UDL_FINISHED_PARSE 40001)
+set(LOG_TAG_AGG_UDL_END_NOT_FULLY_GATHERED 40010)
+set(LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED 40011)
+set(LOG_TAG_AGG_UDL_RETRIEVE_DOC_START 40020)
+set(LOG_TAG_AGG_UDL_RETRIEVE_DOC_END 40021)
+set(LOG_TAG_AGG_UDL_PUT_RESULT_START 40030)
+set(LOG_TAG_AGG_UDL_PUT_RESULT_END 40031)
 
 
 
@@ -84,7 +87,10 @@ target_compile_definitions(python_udl PRIVATE
     LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END=${LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END}
     LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_END=${LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_END}
     LOG_TAG_AGG_UDL_START=${LOG_TAG_AGG_UDL_START}
+    LOG_TAG_AGG_UDL_FINISHED_PARSE=${LOG_TAG_AGG_UDL_FINISHED_PARSE}
     LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED=${LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED}
+    LOG_TAG_AGG_UDL_RETRIEVE_DOC_START=${LOG_TAG_AGG_UDL_RETRIEVE_DOC_START}
+    LOG_TAG_AGG_UDL_RETRIEVE_DOC_END=${LOG_TAG_AGG_UDL_RETRIEVE_DOC_END}
     LOG_TAG_AGG_UDL_PUT_RESULT_START=${LOG_TAG_AGG_UDL_PUT_RESULT_START}
     LOG_TAG_AGG_UDL_PUT_RESULT_END=${LOG_TAG_AGG_UDL_PUT_RESULT_END}
     LOG_TAG_AGG_UDL_END=${LOG_TAG_AGG_UDL_END}
@@ -95,10 +101,11 @@ target_compile_definitions(python_udl PRIVATE
 set(LOG_CLUSTER_SEARCH_UDL_START 30000)
 set(LOG_CLUSTER_SEARCH_UDL_LOADEMB_START 30010)
 set(LOG_CLUSTER_SEARCH_UDL_LOADEMB_END 30011)
-set(LOG_CLUSTER_SEARCH_DESERIALIZE_END 30020)
-set(LOG_CLUSTER_SEARCH_FAISS_SEARCH_END 30021)
-set(LOG_CLUSTER_SEARCH_UDL_EMIT_START 30030)
-set(LOG_CLUSTER_SEARCH_UDL_EMIT_END 30031)
+set(LOG_CLUSTER_SEARCH_DESERIALIZE_START 30020)
+set(LOG_CLUSTER_SEARCH_DESERIALIZE_END 30021)
+set(LOG_CLUSTER_SEARCH_FAISS_SEARCH_END 30031)
+set(LOG_CLUSTER_SEARCH_UDL_EMIT_START 30040)
+set(LOG_CLUSTER_SEARCH_UDL_EMIT_END 30041)
 set(LOG_CLUSTER_SEARCH_UDL_END 30100)
 
 
@@ -117,6 +124,7 @@ target_compile_definitions(clusters_search_udl PRIVATE
     LOG_CLUSTER_SEARCH_UDL_START=${LOG_CLUSTER_SEARCH_UDL_START}
     LOG_CLUSTER_SEARCH_UDL_LOADEMB_START=${LOG_CLUSTER_SEARCH_UDL_LOADEMB_START}
     LOG_CLUSTER_SEARCH_UDL_LOADEMB_END=${LOG_CLUSTER_SEARCH_UDL_LOADEMB_END}
+    LOG_CLUSTER_SEARCH_DESERIALIZE_START=${LOG_CLUSTER_SEARCH_DESERIALIZE_START}
     LOG_CLUSTER_SEARCH_DESERIALIZE_END=${LOG_CLUSTER_SEARCH_DESERIALIZE_END}
     LOG_CLUSTER_SEARCH_FAISS_SEARCH_END=${LOG_CLUSTER_SEARCH_FAISS_SEARCH_END}
     LOG_CLUSTER_SEARCH_UDL_EMIT_START=${LOG_CLUSTER_SEARCH_UDL_EMIT_START}
