--- a/perf_config.py.in
+++ b/perf_config.py.in
@@ -5,8 +5,8 @@ EMBEDDING_DIM = 1024
 '''
 Configurations for offline vector database construction
 '''
-NUM_CENTROIDS = 3
-NUM_EMB_PER_CENTROIDS = 10000
+# NUM_CENTROIDS = 3
+# NUM_EMB_PER_CENTROIDS = 10000
 NUM_EMB_PER_OBJ = 200  # < 1MB/4KB = 250
 USE_WHICH_FAISE_SAERCH = 0 # 0: cpu_flat, 1: gpu_flat, 2: gpu_ivf_flat, 3: gpu_ivf_pq
 
@@ -14,10 +14,11 @@ USE_WHICH_FAISE_SAERCH = 0 # 0: cpu_flat, 1: gpu_flat, 2: gpu_ivf_flat, 3: gpu_i
 '''
 Configuration for client side batch requests
 '''
-TOTAL_BATCH_COUNT = 10
+TOTAL_BATCH_COUNT = 1
 QUERY_PER_BATCH = 6
 MAX_RESULT_WAIT_TIME = 120 # seconds
 RETRIEVE_WAIT_INTERVAL = 0.5 # seconds
+PRINT_FINISH_INTEVAL = 100 # print a checkpoint after 100 batches 
 
 '''
 Configurations for debugging
@@ -53,9 +54,12 @@ LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_END=@LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_END@
 
 # AGG GENERATE UDL
 LOG_TAG_AGG_UDL_START=@LOG_TAG_AGG_UDL_START@
+LOG_TAG_AGG_UDL_FINISHED_PARSE=@LOG_TAG_AGG_UDL_FINISHED_PARSE@
+LOG_TAG_AGG_UDL_END_NOT_FULLY_GATHERED=@LOG_TAG_AGG_UDL_END_NOT_FULLY_GATHERED@
 LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED=@LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED@
+LOG_TAG_AGG_UDL_RETRIEVE_DOC_START=@LOG_TAG_AGG_UDL_RETRIEVE_DOC_START@
+LOG_TAG_AGG_UDL_RETRIEVE_DOC_END=@LOG_TAG_AGG_UDL_RETRIEVE_DOC_END@
 LOG_TAG_AGG_UDL_PUT_RESULT_START=@LOG_TAG_AGG_UDL_PUT_RESULT_START@
 LOG_TAG_AGG_UDL_PUT_RESULT_END=@LOG_TAG_AGG_UDL_PUT_RESULT_END@
-LOG_TAG_AGG_UDL_END=@LOG_TAG_AGG_UDL_END@
 
 
