--- a/perf_config.py.in
+++ b/perf_config.py.in
@@ -14,7 +14,7 @@ USE_WHICH_FAISE_SAERCH = 0 # 0: cpu_flat, 1: gpu_flat, 2: gpu_ivf_flat, 3: gpu_i
 '''
 Configuration for client side batch requests
 '''
-TOTAL_BATCH_COUNT = 1
+TOTAL_BATCH_COUNT = 10
 QUERY_PER_BATCH = 6
 MAX_RESULT_WAIT_TIME = 120 # seconds
 RETRIEVE_WAIT_INTERVAL = 0.5 # seconds
@@ -23,7 +23,7 @@ PRINT_FINISH_INTEVAL = 100 # print a checkpoint after 100 batches
 '''
 Configurations for debugging
 '''
-INCLUDE_RUNNING_LLM=0
+INCLUDE_RUNNING_LLM=@INCLUDE_RUNNING_LLM@
 PRINT_DEBUG_MESSAGE=@PRINT_DEBUG_MESSAGE@
 
 
