added logging for retrieving docs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,10 @@ set(LOG_TAG_AGG_UDL_FINISHED_PARSE 40001)
 set(LOG_TAG_AGG_UDL_END_NOT_FULLY_GATHERED 40010)
 set(LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED 40011)
 set(LOG_TAG_AGG_UDL_RETRIEVE_DOC_START 40020)
+set(LOG_TAG_AGG_UDL_LOAD_ANSWER_START 40120)
+set(LOG_TAG_AGG_UDL_LOAD_ANSWER_END 40121)
+set(LOG_TAG_AGG_UDL_LOAD_DOC_START 40220)
+set(LOG_TAG_AGG_UDL_LOAD_DOC_END 40221)
 set(LOG_TAG_AGG_UDL_RETRIEVE_DOC_END 40021)
 set(LOG_TAG_AGG_UDL_PUT_RESULT_START 40030)
 set(LOG_TAG_AGG_UDL_PUT_RESULT_END 40031)
@@ -91,6 +95,10 @@ target_compile_definitions(python_udl PRIVATE
     LOG_TAG_AGG_UDL_FINISHED_PARSE=${LOG_TAG_AGG_UDL_FINISHED_PARSE}
     LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED=${LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED}
     LOG_TAG_AGG_UDL_RETRIEVE_DOC_START=${LOG_TAG_AGG_UDL_RETRIEVE_DOC_START}
+    LOG_TAG_AGG_UDL_LOAD_ANSWER_START=${LOG_TAG_AGG_UDL_LOAD_ANSWER_START}
+    LOG_TAG_AGG_UDL_LOAD_ANSWER_END=${LOG_TAG_AGG_UDL_LOAD_ANSWER_END}
+    LOG_TAG_AGG_UDL_LOAD_DOC_START=${LOG_TAG_AGG_UDL_LOAD_DOC_START}
+    LOG_TAG_AGG_UDL_LOAD_DOC_END=${LOG_TAG_AGG_UDL_LOAD_DOC_END}
     LOG_TAG_AGG_UDL_RETRIEVE_DOC_END=${LOG_TAG_AGG_UDL_RETRIEVE_DOC_END}
     LOG_TAG_AGG_UDL_PUT_RESULT_START=${LOG_TAG_AGG_UDL_PUT_RESULT_START}
     LOG_TAG_AGG_UDL_PUT_RESULT_END=${LOG_TAG_AGG_UDL_PUT_RESULT_END}
