--- a/perf_config.py.in
+++ b/perf_config.py.in
@@ -58,6 +58,10 @@ LOG_TAG_AGG_UDL_FINISHED_PARSE=@LOG_TAG_AGG_UDL_FINISHED_PARSE@
 LOG_TAG_AGG_UDL_END_NOT_FULLY_GATHERED=@LOG_TAG_AGG_UDL_END_NOT_FULLY_GATHERED@
 LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED=@LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED@
 LOG_TAG_AGG_UDL_RETRIEVE_DOC_START=@LOG_TAG_AGG_UDL_RETRIEVE_DOC_START@
+LOG_TAG_AGG_UDL_LOAD_ANSWER_START=@LOG_TAG_AGG_UDL_LOAD_ANSWER_START@
+LOG_TAG_AGG_UDL_LOAD_ANSWER_END=@LOG_TAG_AGG_UDL_LOAD_ANSWER_END@
+LOG_TAG_AGG_UDL_LOAD_DOC_START=@LOG_TAG_AGG_UDL_LOAD_DOC_START@
+LOG_TAG_AGG_UDL_LOAD_DOC_END=@LOG_TAG_AGG_UDL_LOAD_DOC_END@
 LOG_TAG_AGG_UDL_RETRIEVE_DOC_END=@LOG_TAG_AGG_UDL_RETRIEVE_DOC_END@
 LOG_TAG_AGG_UDL_PUT_RESULT_START=@LOG_TAG_AGG_UDL_PUT_RESULT_START@
 LOG_TAG_AGG_UDL_PUT_RESULT_END=@LOG_TAG_AGG_UDL_PUT_RESULT_END@
