redesigned pipeline: 1. moved centroids search and cluster search to CPP implementation 2. aggregate by each query instead of batch 3. taken out encoder and llm in the Vortex pipeline, TODO: use OpenAI API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ target_link_libraries(python_udl cascade Python3::Python Python3::NumPy)
 
 # printout mode
 set(INCLUDE_RUNNING_LLM 0)
-set(PRINT_DEBUG_MESSAGE 0)
+set(PRINT_DEBUG_MESSAGE 1)
 
 # Client log tags
 set(LOG_TAG_QUERIES_SENDING_START 10000)
@@ -50,16 +50,40 @@ set(LOG_TAG_QUERIES_SENDING_END 10001)
 set(LOG_TAG_QUERIES_RESULT_CLIENT_RECEIVED 10100)
 
 # Centroids_search UDL tags
-set(LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_START 20000)
-set(LOG_TAG_CENTROIDS_EMBEDDINGS_LOADING_START 20010)
-set(LOG_TAG_CENTROIDS_EMBEDDINGS_LOADING_END 20011)
-set(LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_ENCODE_START 20020)
-set(LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_ENCODE_END 20021)
-set(LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_START 20030)
-set(LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_END 20031)
-set(LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START 20040)
-set(LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END 20041)
-set(LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_END 20100)
+set(LOG_CENTROIDS_EMBEDDINGS_UDL_START 20000)
+set(LOG_CENTROIDS_EMBEDDINGS_LOADING_START 20010)
+set(LOG_CENTROIDS_EMBEDDINGS_LOADING_END 20011)
+set(LOG_CENTROIDS_SEARCH_DESERIALIZE_START 20020)
+set(LOG_CENTROIDS_SEARCH_DESERIALIZE_END 20021)
+set(LOG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_START 20030)
+set(LOG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_END 20031)
+set(LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START 20040)
+set(LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END 20041)
+set(LOG_CENTROIDS_EMBEDDINGS_UDL_END 20100)
+
+add_library(centroids_search_udl SHARED centroids_search_udl.cpp)
+target_include_directories(centroids_search_udl PRIVATE
+    ${FAISS_INCLUDE_DIRS}
+    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
+)
+target_link_libraries(centroids_search_udl PRIVATE derecho::cascade faiss CUDA::cudart)
+
+target_compile_definitions(centroids_search_udl PRIVATE
+    PRINT_DEBUG_MESSAGE=${PRINT_DEBUG_MESSAGE}
+    LOG_CENTROIDS_EMBEDDINGS_UDL_START=${LOG_CENTROIDS_EMBEDDINGS_UDL_START}
+    LOG_CENTROIDS_EMBEDDINGS_LOADING_START=${LOG_CENTROIDS_EMBEDDINGS_LOADING_START}
+    LOG_CENTROIDS_EMBEDDINGS_LOADING_END=${LOG_CENTROIDS_EMBEDDINGS_LOADING_END}
+    LOG_CENTROIDS_SEARCH_DESERIALIZE_START=${LOG_CENTROIDS_SEARCH_DESERIALIZE_START}
+    LOG_CENTROIDS_SEARCH_DESERIALIZE_END=${LOG_CENTROIDS_SEARCH_DESERIALIZE_END}
+    LOG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_START=${LOG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_START}
+    LOG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_END=${LOG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_END}
+    LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START=${LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START}
+    LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END=${LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END}
+    LOG_CENTROIDS_EMBEDDINGS_UDL_END=${LOG_CENTROIDS_EMBEDDINGS_UDL_END}
+)
 
 # AGG GENERATE UDL tags
 set(LOG_TAG_AGG_UDL_START 40000)
@@ -76,21 +100,10 @@ set(LOG_TAG_AGG_UDL_PUT_RESULT_START 40030)
 set(LOG_TAG_AGG_UDL_PUT_RESULT_END 40031)
 
 
-
 target_compile_definitions(python_udl PRIVATE
     LOG_TAG_QUERIES_SENDING_START=${LOG_TAG_QUERIES_SENDING_START}
     LOG_TAG_QUERIES_SENDING_END=${LOG_TAG_QUERIES_SENDING_END}
     LOG_TAG_QUERIES_RESULT_CLIENT_RECEIVED=${LOG_TAG_QUERIES_RESULT_CLIENT_RECEIVED}
-    LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_START=${LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_START}
-    LOG_TAG_CENTROIDS_EMBEDDINGS_LOADING_START=${LOG_TAG_CENTROIDS_EMBEDDINGS_LOADING_START}
-    LOG_TAG_CENTROIDS_EMBEDDINGS_LOADING_END=${LOG_TAG_CENTROIDS_EMBEDDINGS_LOADING_END}
-    LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_ENCODE_START=${LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_ENCODE_START}
-    LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_ENCODE_END=${LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_ENCODE_END}
-    LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_START=${LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_START}
-    LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_END=${LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_END}
-    LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START=${LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START}
-    LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END=${LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END}
-    LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_END=${LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_END}
     LOG_TAG_AGG_UDL_START=${LOG_TAG_AGG_UDL_START}
     LOG_TAG_AGG_UDL_FINISHED_PARSE=${LOG_TAG_AGG_UDL_FINISHED_PARSE}
     LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED=${LOG_TAG_AGG_UDL_QUERY_FINISHED_GATHERED}
