--- a/perf_config.py.in
+++ b/perf_config.py.in
@@ -36,19 +36,7 @@ LOG_TAG_QUERIES_SENDING_START=@LOG_TAG_QUERIES_SENDING_START@
 LOG_TAG_QUERIES_SENDING_END=@LOG_TAG_QUERIES_SENDING_END@
 LOG_TAG_QUERIES_RESULT_CLIENT_RECEIVED=@LOG_TAG_QUERIES_RESULT_CLIENT_RECEIVED@
 
-# Centroids_search UDL log tags
-LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_START=@LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_START@
-LOG_TAG_CENTROIDS_EMBEDDINGS_LOADING_START=@LOG_TAG_CENTROIDS_EMBEDDINGS_LOADING_START@
-LOG_TAG_CENTROIDS_EMBEDDINGS_LOADING_END=@LOG_TAG_CENTROIDS_EMBEDDINGS_LOADING_END@
-LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_ENCODE_START=@LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_ENCODE_START@
-LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_ENCODE_END=@LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_ENCODE_END@
-LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_START=@LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_START@
-LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_END=@LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_END@
-LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START=@LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START@
-LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END=@LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END@
-LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_END=@LOG_TAG_CENTROIDS_EMBEDDINGS_UDL_END@
-
-
+# Centroids_search UDL log tags are set in CMakelists.txt
 # Cluster_search UDL log tags are set in CMakelists.txt
 
 
