edited tag for logging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,8 +55,9 @@ set(LOG_CENTROIDS_SEARCH_DESERIALIZE_START 20020)
 set(LOG_CENTROIDS_SEARCH_DESERIALIZE_END 20021)
 set(LOG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_START 20030)
 set(LOG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_END 20031)
-set(LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START 20040)
-set(LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END 20041)
+set(LOG_CENTROIDS_EMBEDDINGS_UDL_COMBINE_END 20041)
+set(LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START 20050)
+set(LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END 20051)
 set(LOG_CENTROIDS_EMBEDDINGS_UDL_END 20100)
 
 add_library(centroids_search_udl SHARED centroids_search_udl.cpp)
@@ -76,6 +77,7 @@ target_compile_definitions(centroids_search_udl PRIVATE
     LOG_CENTROIDS_SEARCH_DESERIALIZE_END=${LOG_CENTROIDS_SEARCH_DESERIALIZE_END}
     LOG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_START=${LOG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_START}
     LOG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_END=${LOG_CENTROIDS_EMBEDDINGS_UDL_SEARCH_END}
+    LOG_CENTROIDS_EMBEDDINGS_UDL_COMBINE_END=${LOG_CENTROIDS_EMBEDDINGS_UDL_COMBINE_END}
     LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START=${LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_START}
     LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END=${LOG_CENTROIDS_EMBEDDINGS_UDL_EMIT_END}
     LOG_CENTROIDS_EMBEDDINGS_UDL_END=${LOG_CENTROIDS_EMBEDDINGS_UDL_END}
@@ -123,8 +125,9 @@ set(LOG_CLUSTER_SEARCH_UDL_LOADEMB_END 30011)
 set(LOG_CLUSTER_SEARCH_DESERIALIZE_START 30020)
 set(LOG_CLUSTER_SEARCH_DESERIALIZE_END 30021)
 set(LOG_CLUSTER_SEARCH_FAISS_SEARCH_END 30031)
-set(LOG_CLUSTER_SEARCH_UDL_EMIT_START 30040)
-set(LOG_CLUSTER_SEARCH_UDL_EMIT_END 30041)
+set(LOG_CLUSTER_SEARCH_CONSTRUCT_KEYS_END 30041)
+set(LOG_CLUSTER_SEARCH_UDL_EMIT_START 30050)
+set(LOG_CLUSTER_SEARCH_UDL_EMIT_END 30051)
 set(LOG_CLUSTER_SEARCH_UDL_END 30100)
 
 
@@ -145,6 +148,7 @@ target_compile_definitions(clusters_search_udl PRIVATE
     LOG_CLUSTER_SEARCH_DESERIALIZE_START=${LOG_CLUSTER_SEARCH_DESERIALIZE_START}
     LOG_CLUSTER_SEARCH_DESERIALIZE_END=${LOG_CLUSTER_SEARCH_DESERIALIZE_END}
     LOG_CLUSTER_SEARCH_FAISS_SEARCH_END=${LOG_CLUSTER_SEARCH_FAISS_SEARCH_END}
+    LOG_CLUSTER_SEARCH_CONSTRUCT_KEYS_END=${LOG_CLUSTER_SEARCH_CONSTRUCT_KEYS_END}
     LOG_CLUSTER_SEARCH_UDL_EMIT_START=${LOG_CLUSTER_SEARCH_UDL_EMIT_START}
     LOG_CLUSTER_SEARCH_UDL_EMIT_END=${LOG_CLUSTER_SEARCH_UDL_EMIT_END}
     LOG_CLUSTER_SEARCH_UDL_END=${LOG_CLUSTER_SEARCH_UDL_END}
